fix align on icons and text

--- a/sass/partials/_services.scss
+++ b/sass/partials/_services.scss
@@ -3,7 +3,8 @@ body {
   font-family: 'unbuntu';
 }
 .services {
-  margin-left: 8em;
+  margin-left: 20em;
+  width: 63%;
 
 }
 .heading2 {
@@ -34,9 +35,5 @@ body {
 
 .services__img {
   float: left;
-  margin: 20px 0 0 6em;
-  padding-right: 2em;
-}
-.bussines__img{
-  margin: 20px 0 0 120px;
+  margin: 0 0 0 7em;
 }
